# irrationalsignals-python

./: .gitignore  README.md  pyproject.toml
src/irrationalsignals/: __init__.py  client.py  exceptions.py  models.py
