[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irrationalsignals"
version = "0.1.0"
description = "Python SDK for the IrrationalSignals stock-signal API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "IrrationalSignals" }]
keywords = ["trading", "signals", "stocks", "api", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://irrationalsignals.com"
Documentation = "https://irrationalsignals.com/docs"
Source = "https://github.com/davidjvvuuren/irrationalsignals-python"

[tool.setuptools.packages.find]
where = ["src"]
